styles.css
body {
   background-image: url(codeimagec.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
}

.main {
    display: flex;
    align-items: center;
    flex-direction: column;
}

#title {
    color: white;
    font-size: 3.125rem;
    text-shadow: 0.1875rem 0.125rem black;
    font-size: 3.75rem;
    justify-content: center;
}

#description {
    font-weight:normal;
    color: white;
    font-size: 2.5rem;
    margin-top: 0.3125rem;
    text-shadow: 0.125rem 0.125rem black;
}

#survey-form {
   font-size: 1.25rem;
   color: white;
   width: 70%;
   padding: 2em;
   border: 0.0625rem solid #CCC;
   border-radius: 1em;
   margin-top: 3.125rem;
   background-color: rgba(14, 27, 145, 0.685);
   opacity: 0.9;
   position: relative;
   margin-bottom: 3.125rem;
}

.form-label {
    font-size: 2.2rem;
}

.input {
    width: 90%;
    height: 1.5rem;
    padding: 2% 2%;
    margin: 2% 0;
    font-size: 1rem;
    border-radius: 0.125rem;
    border:none;
    outline: none;
}

.drop-down {
    width: 94%;
    height: 3rem;
    border:none;
    outline: none;
    font-size: 1rem;
}

.drop-down-title {
    font-size: 1.75rem;
}

input[type='radio'] {
    zoom: 1.5;
}

.selected {
    font-size: 2.5rem;
}

.apply {
    font-size: 1.25rem;
}

.additional-information {
    font-size: 1.375rem;
}

.check-box-questions {
    line-height: 1.4;
}

input[type='checkbox'] {
     zoom: 1.5;
}

#comments {
    width: 90%;
    height: 6rem;
}
#submit {
    width: 80%;
    left: 5%;
    height: 3rem;
    font-size: 1.875rem;
    margin-top: 1.25rem;
    justify-content: center;
    color: white;
    border-radius: 0.25rem;
    background-color: rgb(75, 174, 32);
    position: relative;
}

li {
    list-style-type: none;
}

